feat: replace tsc with tsgo and add oxlint-tsgolint for type-aware linting
- Replace typescript with @typescript/native-preview (tsgo)
- Add oxlint-tsgolint for type-aware linting (20-40x faster)
- Enable type-aware rules: no-floating-promises, no-misused-promises, await-thenable
- Update check script to use tsgo instead of tsc
- Update documentation in agents.md

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"fmt": "oxfmt agent/**/*.ts",
 		"lint": "oxlint agent/**/*.ts",
-		"check": "tsc --noEmit",
+		"check": "tsgo --noEmit",
 		"fix": "pnpm fmt && pnpm lint --fix"
 	},
 	"devDependencies": {
@@ -16,8 +16,9 @@
 		"@mariozechner/pi-tui": "latest",
 		"@sinclair/typebox": "latest",
 		"@types/node": "latest",
+		"@typescript/native-preview": "latest",
 		"oxfmt": "latest",
 		"oxlint": "latest",
-		"typescript": "latest"
+		"oxlint-tsgolint": "latest"
 	}
 }
