--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,6 +1,9 @@
 {
 	"rules": {
 		"typescript/no-explicit-any": "warn",
-		"typescript/no-unused-vars": "warn"
+		"typescript/no-unused-vars": "warn",
+		"typescript/no-floating-promises": "error",
+		"typescript/no-misused-promises": "error",
+		"typescript/await-thenable": "error"
 	}
 }
