feat(codebase): add disk-level clone caching with 10min reuse TTL
- Add computeCacheKey() for deterministic repo+branch+sparse matching
- Add findCachedClone() to scan existing clones within REUSE_TTL_MS
- Add reuseClone() to symlink to existing clone without git operations
- Cache check runs before any git calls in the create action
- Fix librarian agent description in SYSTEM.md (has codebase tool access)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript/native-preview": "latest",
     "oxfmt": "latest",
     "oxlint": "latest",
-    "oxlint-tsgolint": "latest"
+    "oxlint-tsgolint": "latest",
+    "typescript": "^5.9.3"
   }
 }
