--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "devDependencies": {
     "@anthropic-ai/sandbox-runtime": "^0.0.34",
-    "@mariozechner/pi-agent-core": "^0.51.1",
-    "@mariozechner/pi-ai": "^0.51.1",
-    "@mariozechner/pi-coding-agent": "^0.51.1",
-    "@mariozechner/pi-tui": "^0.51.1",
+    "@mariozechner/pi-agent-core": "^0.51.3",
+    "@mariozechner/pi-ai": "^0.51.3",
+    "@mariozechner/pi-coding-agent": "^0.51.3",
+    "@mariozechner/pi-tui": "^0.51.3",
     "@sinclair/typebox": "^0.34.48",
     "@types/node": "^25.2.0",
-    "@typescript/native-preview": "^7.0.0-dev.20260202.1",
+    "@typescript/native-preview": "7.0.0-dev.20260203.1",
     "oxfmt": "^0.28.0",
     "oxlint": "^1.43.0",
     "oxlint-tsgolint": "^0.11.4",
